2008-12-22 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/stdlib/File/write.py: Add mode argument to the
	file.write() function.
	* Release 0.9.12

2008-12-19 Samuel Abels <http://debain.org>

	* src/Exscript/TemplateRunner.py,
	src/Exscript/TerminalActions/LoggedSequence.py: Improved logfile handling,
	create a new logfile for eacht retry.
	* src/Exscript/Interpreter/stdlib/File/exists.py,
	src/Exscript/Interpreter/stdlib/File/mkdir.py: New stdlib functions.

2008-11-17 Samuel Abels <http://debain.org>

	* src/Exscript/TemplateRunner.py: Add hosts_csv and hosts_file arguments.

2008-11-04 Samuel Abels <http://debain.org>

	* exscript: Add -e command line switch.
	* src/Exscript/TemplateRunner.py: Ignore empty lines in CSV files.

2008-10-30 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/Regex.py: Allow for embedding variables in 
	regular expressions.

2008-10-29 Samuel Abels <http://debain.org>

	* src/Exscript/TemplateRunner.py: Add define_hosts() method.

2008-10-28 Samuel Abels <http://debain.org>

	* exscript, src/Exscript/Exscript.py, src/Exscript/TemplateRunner.py: Add
	--retry-login switch that allows for retrying the login procedure.

2008-10-24 Samuel Abels <http://debain.org>

	* src/Exscript/Account.py: Add 'release_before' signal.
	* src/Exscript/TerminalActions/Authenticate.py: Emit 'login_done' signal 
	on Authenticate class, no longer on the Account class.

2008-10-23 Samuel Abels <http://debain.org>

	* src/Exscript/TerminalActions/Authenticate.py, src/Exscript/Account.py: Add
	a 'login_done' signal to the Account class.

2008-10-22 Samuel Abels <http://debain.org>

	* exscript, src/Exscript/AccountManager.py,
	src/Exscript/TerminalActions/Authenticate.py: Completed support for account
	pooling using the --acount-pool command line switch.

2008-10-21 Samuel Abels <http://debain.org>

	* all-over: Refactoring to support account pooling.

2008-10-21 Samuel Abels <http://debain.org>
